fix overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .app {
   height: 100%;
   background: black;
+  overflow: hidden;
 }
 
 .progress {
